--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div class="container">
     Ezzel az App-pal, könnyen kiszámíthatod az áruk Eladási árát!
     <div class="input-field">
-      <input type="number" class="termek-ar" placeholder="A termék beszerzési ára"></input>
+      <input type="number" class="termek-ar" id="termek-ar" onclick="clearInput()" placeholder="A termék beszerzési ára"></input>
     </div>
     <div class="eladasi-ar-mezo" onload="">EREDMÉNY</div>
 
