--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <h1>Kalk App</h1>
   <small class="cim">for kis boltoknak</small>
   <div class="container">
-    Ezzel az App-pal, könnyen kiszámíthatod az áruk Eladási árát!
+    <span>Ezzel az App-pal, könnyen kiszámíthatod az áruk Eladási árát!</span>
     <div class="input-field">
       <input type="number" class="termek-ar" id="termek-ar" onclick="clearInput()"
         placeholder="A termék beszerzési ára"></input>
