--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
 
     <small class="help-text">Nettó ár esetén:</small>
     <div class="btnDIV">
-      <button onclick="otAFA()">5% ÁFA</button>
-      <button onclick="tNyolcAFA()">18% ÁFA</button>
-      <button onclick="hHetAFA()">27% ÁFA</button>
+      <button id="five-percent">5% ÁFA</button>
+      <button id="egithteen-percent">18% ÁFA</button>
+      <button id="twentyseven-percent">27% ÁFA</button>
     </div> <small class="help-text">Bruttó ár esetén:</small>
 
     <div class="btnDIV">
-      <button class="haszonkulcs" onclick="csakHaszon()">HASZONKULCS</button>
+      <button class="haszonkulcs" onclick="csakHaszon()" id="profit-key">HASZONKULCS</button>
     </div>
     <!-- <h3>Tejtermék</h3>
     <small class="help-text">Nettó ár esetén:</small>
